# DIFFICE_jax

./: .readthedocs.yaml  Contribution.md  LICENSE  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: publish_test.txt  publish_test.yml  python-publish.yml
data/: README.md  data_pinns_LarsenC.mat  prepare_data.py  sampling.py
data/pinns/: preprocessing.py  sampling.py
data/xpinns/: preprocessing.py  sampling.py
diffice_jax/: __init__.py
diffice_jax/data/xpinns/: preprocessing.py  sampling.py
diffice_jax/equation/: eqn_aniso_zz.py  eqn_iso.py  ssa_eqn_aniso_zz.py
diffice_jax/model/pinns/: initialization.py  loss.py  networks.py
diffice_jax/model/xpinns/: initialization.py  networks.py  prediction.py
diffice_jax/optimizer/: optimization.py
docs/: Anisotropic.md  Code_description.md  Codes.md  Data.md  Data_prepare.md  XPINNs.md  data_prepare.md  requirements.txt
docs/figure/: backup.bib  backup.md
docs/source/: Anisotropic.md  Data.md  Isotropic.md  XPINNs.md  code_data.md  code_eqn.md  code_models.md  code_optimizer.md  conf.py  examples.rst  func_data.md  func_eqn.md  func_models.md  index.rst  tutorial.rst
equation/: README.md  ssa_eqn_iso.py
examples/: Anisotropic.md  Isotropic.md  README.md  train_pinns_aniso.ipynb  train_pinns_aniso.py  train_pinns_iso.ipynb  train_pinns_iso.py  train_xpinns_aniso.ipynb  train_xpinns_aniso.py  train_xpinns_iso.ipynb  train_xpinns_iso.py
examples/anisotropic/: train_pinns_aniso.py  train_xpinns_aniso.py
examples/colab/: train_pinns_aniso.ipynb  train_pinns_iso.ipynb  train_xpinns_aniso.ipynb  train_xpinns_iso.ipynb
examples/isotropic/: train_pinns_iso.py  train_xpinns_iso.py
examples/real_data/: data_pinns_Amery.mat
ice_shelf/: Data_Amery.mat  README.md  load_icedata.py  pinn_icedata.ipynb  pinn_icedata.py
model/: README.md  XPINNs.md  initialization.py  loss.py  prediction.py
model/pinns/: initialization.py  prediction.py
model/xpinns/: loss.py  networks.py  prediction.py
optimizer/: README.md  optimization.py  optimizer.py
src/figure/: syndata_cond.key
src/old version/version 0.0/: PINN_isotropic.py  PINN_noniso_xy.py  PINN_noniso_zz.py  PINNmatch_isotropic.py  PINNmatch_noniso_xy.py  (+6 more)
tests/: data_pinns_test.mat  test_examples.py  test_func.py
tutorial/: README.md  Readme.md  SynData_exp1.mat  SynData_exp1.txt  data_load.py  info_SSAeqn.py  load_syndata.py  pinn_syndata.ipynb  pinn_syndata.py  train_syndata.ipynb  train_syndata.py  txt2mat.m
tutorial/COMSOL/: SynData_exp1.mat  txt2mat.m
tutorial/colab/: train_syndata.ipynb
