[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffice_jax"
version = "0.0.3"
authors = [
  { name="Yongji Wang", email="yw8211@nyu.edu" },
]
description = "A differentiable neural-network solver for data assimilation of ice shelves written in JAX"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "jax >= 0.4.20",
  "jaxlib >= 0.4.20",
  "tensorflow-probability >= 0.23.0",
  "matplotlib >= 3.8.0",
  "optax >= 0.1.7"
]

[project.urls]
Homepage = "https://github.com/YaoGroup/DIFFICE_jax"
Issues = "https://github.com/YaoGroup/DIFFICE_jax/issues"
repository = "https://github.com/YaoGroup/DIFFICE_jax"

[tool.setuptools]
package-dir = {"" = "diffice_jax"}

[tool.setuptools.packages.find]
where = ["diffice_jax"]
